--- a/manga_site/package.json
+++ b/manga_site/package.json
@@ -5,9 +5,18 @@
   "repository": "https://github.com/ivomastre/manga_aggregrator.git",
   "author": "ivomastre <ivomastre@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "dev": "npx nodemon localhost 5000"
+  },
   "dependencies": {
+    "@types/express": "^4.17.6",
+    "@types/node": "^14.0.10",
+    "@types/selenium-webdriver": "^4.0.9",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "selenium-webdriver": "^4.0.0-alpha.7",
+    "typescript": "^3.9.3"
   }
 }
