--- a/manga_site/package.json
+++ b/manga_site/package.json
@@ -12,11 +12,21 @@
   "dependencies": {
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.10",
+    "@types/psl": "^1.1.0",
     "@types/selenium-webdriver": "^4.0.9",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
+    "psl": "^1.8.0",
     "pug": "^2.0.4",
     "selenium-webdriver": "^4.0.0-alpha.7",
     "typescript": "^3.9.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "^2.0.5"
   }
 }
